# footyvision

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: botsort_football.yaml
docs/: architecture.md  data.md
notebooks/: .gitkeep  01_data_exploration.ipynb
scripts/: 02_train_detector.py  03_run_inference.py  04_run_tracking.py  05_team_classification.py  06_train_pitch_keypoints.py  07_homography_tactical_view.py  08_ball_tracking_possession.py  download_data.py
src/footyvision/: __init__.py  cli.py  config.py
src/footyvision/classification/: __init__.py
src/footyvision/detection/: __init__.py
src/footyvision/homography/: __init__.py  pitch_config.py
src/footyvision/tracking/: __init__.py
src/footyvision/utils/: __init__.py
src/footyvision/visualization/: __init__.py
tests/: test_imports.py
